--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "0.75.1/extended"
+          hugo-version: "0.75.1"
+          extended: true
 
       - name: Build
         # remove --minify tag if you do not need it
