--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,10 @@ jobs:
         # remove --minify tag if you do not need it
         # docs: https://gohugo.io/hugo-pipes/minification/
         working-directory: ./hugo
-        run: hugo --minify -b www.digital-studies.xyz
+        run: 
+          pwd
+          hugo version
+          hugo --minify -b www.digital-studies.xyz
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
