--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         # remove --minify tag if you do not need it
         # docs: https://gohugo.io/hugo-pipes/minification/
-        working-directory: ./hugo
+        #working-directory: ./hugo
         run: hugo --minify -b www.digital-studies.xyz
           #pwd
           #hugo version
