--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -31,6 +31,12 @@ summaryLength = 30
     post = "_blank"
 
     
+[markup]
+  [markup.tableOfContents]
+    startLevel = 2    
+    endLevel = -1
+    ordered = false
+    
 
 [params]
   google_analytics_id=""
